# ha-aiper

./: .gitignore  ADOPTION_REVIEW.md  ADOPTION_ROADMAP.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  diff.txt  docker-compose.yml  hacs.json  info.md  pyproject.toml
.claude/: settings.json
.codex/skills/perform-release/: SKILL.md
.codex/skills/perform-release/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  command_failure.yml  model_support.yml
.github/scripts/: check_version_state.py
.github/workflows/: ci-cd.yaml  ci.yml  release.yml  validate.yml
custom_components/aiper/: __init__.py  api.py  api_fixed.py  api_safe.py  binary_sensor.py  button.py  config_flow.py  const.py  controller.py  coordinator.py  crypto.py  device_images.py  diagnostics.py  helpers.py  manifest.json  mqtt.py  profiles.py  redaction.py  select.py  sensor.py  services.yaml  state.py  strings.json  switch.py
custom_components/aiper/api/: __init__.py
custom_components/aiper/translations/: de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json  ru.json  zh-Hans.json
docs/: discovery.md
docs/adoption/: backlog.md  community-launch.md
docs/device-models/: README.md  scuba.md  shark.md  surfer.md  unknown.md
docs/examples/: automations.md
docs/product/: entity-taxonomy.md  model-coverage.md  positioning.md  readme-rewrite-plan.md
docs/quality/: test-gap-analysis.md
docs/support/: diagnostics-and-troubleshooting.md
docs/trust/: security-privacy.md
ha-config/: configuration.yaml
lovelace/: example-dashboard.yaml  mushroom-example.yaml
probe-output/20260522-162230-guided-surfer-s2-features/: flow.json  manifest.json  mqtt.ndjson
probe-output/20260522-162230-guided-surfer-s2-features/steps/baseline_idle/: rest-before.json
probe-output/20260522-162902-guided-scuba-x1-features/: manifest.json
probe-output/20260522-163455-guided-scuba-x1-features/: flow.json  manifest.json  mqtt.ndjson
probe-output/20260522-163455-guided-scuba-x1-features/steps/baseline_idle/: rest-after.json  rest-before.json  step.json
tests/: conftest.py  test_aiper_probe.py  test_api_clean_path.py  test_api_session.py  test_config_flow.py  test_controller.py  test_coordinator_push.py  test_device_images.py  test_diagnostics.py  test_integration_setup.py  test_mqtt.py  test_parsers.py  test_platform_entities.py  test_profiles.py  test_redaction.py  test_select.py  test_sensor_images.py  test_services.py  test_status.py  test_translations.py
tools/: aiper_probe.py
tools/discovery_flows/: generic.yaml  scuba-x1-features.yaml  surfer-s2-features.yaml  surfer-s2.yaml
