[project]
name = "ha-aiper"
version = "0.0.0"
description = "Development tooling for the Aiper Home Assistant custom integration."
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "awsiotsdk>=1.29.0",
    "certifi>=2024.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "homeassistant",
    "mypy",
    "pyright>=1.1.409",
    "pytest",
    "pytest-homeassistant-custom-component",
    "pyyaml",
    "ruff",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[tool.pyright]
reportIncompatibleVariableOverride = "none"
